src/main/java/com/example/Demo/errors/exception/files/InvalidFileSizeException.java
package com.example.Demo.errors.exception.files;

public class InvalidFileSizeException extends RuntimeException {
    public InvalidFileSizeException(String message) {
        super(message);
    }
}
